--- a/src/Home.css
+++ b/src/Home.css
@@ -38,6 +38,77 @@
 }
 
 .home-button:hover {
-  background-color: #333;
+  background-color: #ff4d4d;
   color: #fff;
+}
+
+.container {
+  width: 70%;
+  margin: 90px auto;
+}
+
+.reasons-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+
+.reason {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.reason img {
+  width: 5rem;
+  height: 5rem;
+  margin-bottom: 1rem;
+}
+
+.reason h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.reason p {
+  font-size: 1rem;
+}
+
+
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.title h2 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+section p {
+  text-align: center !important;
+}
+
+.title span {
+  display: block;
+  width: 50px;
+  height: 3px;
+  margin: 0 auto;
+  background-color: #ff4d4d;
+  margin-top: 0.5rem;
+}
+
+.partenaires {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  gap: 2rem;
+}
+
+.img img {
+  max-width: 250px;
+  height: auto;
 }
